examples/test/testpolicy970.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy970
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key16: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value2
          key17: value27
          key32: value12
      podSelector:
        matchLabels:
          key45: value45
